--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  p Created by: OPHELIA-AND-KATARINA-lets-try-the-trigger!
+  p Created by: Trigger-Again
